--- a/src/views/links/AcademiasAll.hbs
+++ b/src/views/links/AcademiasAll.hbs
@@ -15,18 +15,28 @@
                                     <h4 class="mr-4">{{nombre}}</h4>
                                 </div>
                                 <ul class="social-links list-inline">
-                                    <li class="list-inline-item"><a title="" data-placement="top" data-toggle="tooltip"
-                                            class="tooltips" href="/links/Clases/{{id}} "  data-original-title="Ver"><i
-                                                class="fa fa-eye"></i></a></li>
+                                    <li class="list-inline-item"><a title="Ver clases" data-placement="top"
+                                            data-toggle="tooltip" class="tooltips" href="/links/Clases/{{id}} "
+                                            data-original-title="Ver"><i class="fa fa-eye"></i></a></li>
+                                    <li class="list-inline-item"><a title="Ver informacion" data-placement="top"
+                                            data-toggle="tooltip" class="tooltips" href="/links/Clases/{{id}} "
+                                            data-original-title="Ver"><i class="fa fa-info"></i></a></li>
                                 </ul>
-
                                 <div class="col mt-4">
                                     <div class="row">
-                                        <h4 class="mr-2">Número telefónico</h4>
+                                        <h4 class="mr-2">Teléfono</h4>
                                     </div>
                                 </div>
                                 <p class="text-muted">
                                     {{numero}}
+                                </p>
+                                <div class="col">
+                                    <div class="row">
+                                        <h4 class="mr-2">Dirección</h4>
+                                    </div>
+                                </div>
+                                <p class="text-muted">
+                                    {{direction}}
                                 </p>
                                 <div class="col">
                                     <div class="row">
