--- a/src/views/links/ClassByID.hbs
+++ b/src/views/links/ClassByID.hbs
@@ -7,22 +7,34 @@
         <div>
             <div class="card-body">
                 <div class="row mt-5">
-                    {{#each clases}}
+                    {{#each horarios}}
                     <div class="col-lg-4" name="Target">
                         <div class="text-center card-box">
                             <div class="member-card pt-2 pb-2">
                                 <div class="col">
-                                    <h4 class="mr-4">{{nombre}}</h4>
+                                    <h4 class="mr-4">{{clase.nombre}}</h4>
                                 </div>
-                                <ul class="social-links list-inline">
-                                    <li class="list-inline-item"><a title="" data-placement="top" data-toggle="tooltip"
-                                            class="tooltips" href="#"  data-original-title="Ver"><i
-                                                class="fa fa-eye"></i></a></li>
-                                </ul>
-
-                                
+                                <h6 class="mt-4">Alumnos máximo</h6>
+                                <div class="col">
+                                    <h4 class="mr-4">{{clase.alumnosMax}}</h4>
+                                </div>
+                                <h6 class="mt-4">Horario de la semana</h6>
+                                <div id='horario' class='contenedor'>
+                                    <div class="card">
+                                        {{#each horarios}}
+                                        <p class="card-text"> {{dia}}: {{apertura}} - {{cierre}}</p>
+                                        {{/each}}
+                                    </div>
+                                </div>
+                                <div class="col">
+                                    <button class="btn btn-dark"><a class=" text-light" href="/links/Inscripcion">Inscribirme</a></button>
+                                </div>
                             </div>
                         </div>
+                    </div>
+                    {{else}}
+                    <div class="mx-auto text-center">
+                        <p>La academia no cuenta con clases registradas, solicite una con el contacto de la academia.</p>
                     </div>
                     {{/each}}
                 </div>
